# RaceLoom

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
examples/2_layer_controller_hierarchy/: 2_layer_controllers.json  forwarding_props_no_H1_to_H4.json  forwarding_props_no_H3_to_H2.json
examples/firewall/: firewall.json  forwarding_props.json
examples/independent_controllers/: forwarding_props_no_H1_to_H4.json  forwarding_props_no_H3_to_H2.json  independent_controllers.json
src/: KATch_comm.py  KATch_hook.py  cli.py  dnk_model.py  errors.py  json_safety_property.py  maude_encoder.py  packet.py  stats.py  trace_collector_hook.py  tracer.py  tracer_config.py  util.py
src/analyzer/: harmful_trace.py  trace_analyzer.py  trace_file_analyzer.py  trace_parser.py  trace_to_dot.py  trace_transition.py  traces_analyzer.py  transition_checker.py  util.py
src/decorators/: bool_cache.py  cache_stats.py  exec_time.py
src/generator/: parallel_trace_generator.py  sequential_trace_generator.py  trace_generator.py  trace_generator_factory.py  trace_tree.py  tracer.py  util.py  worklist.py
src/maude/: dnk.maude  dnk_model_util.maude  dnk_vc.maude  head_normal_form.maude  map_util.maude  parallel_head_normal_form.maude  parallel_trace_state.maude  restricted_dnk.maude  sym_dnk.maude  trace_state.maude  trace_tree.maude  tracer.maude  traces_collector.maude  vector_clock.maude
src/model/: dnk_maude_model.py  json_model.py  split_switch_dnk_model.py  unsplit_switch_dnk_model.py  util.py
src/otf/: trace_generator.py  (+2 more)
test/: util.py
(+275 files in other folders)
