[project]
name = "RaceLoom"
version = "0.0.1"
authors = [
  { name = "Andrei Covaci", email = "covaci_andrei_i@yahoo.com" }
]
requires-python = ">= 3.12.8"
dependencies = [
  "maude~=1.5.0",
  "pydantic==2.10.5",
]

[project.optional-dependencies]
test = [ 
  "pytest==8.4.1",
  "pytest_cov==6.0.0",
  "pydot==3.0.4",
  # If the installation of pygraphviz fails with "...fatal error: graphviz/cgraph.h: No such file or directory",
  # make sure your system has the `graphviz-dev` package installed. 
  # For Debian based Linux systems, `sudo apt install graphviz-dev` should suffice.
  "pygraphviz==1.14",
]

[tool.pylsp-mypy]
plugins = "pydantic.mypy"
enabled = true
strict = true
extra_checks = true
report_progress = true
exclude = ["test/*"]
overrides = [
  true,
  "--warn-return-any",
  "--warn-unreachable",
  "--strict-equality",

  # disallow the usage of 'any'
  # https://mypy.readthedocs.io/en/latest/command_line.html#disallow-dynamic-typing
  "--disallow-any-unimported",
  "--disallow-any-expr",
  "--disallow-any-decorated",
  "--disallow-any-explicit",
  "--disallow-any-generics",
  "--disallow-subclassing-any",

  # disallow untyped code
  # https://mypy.readthedocs.io/en/latest/command_line.html#untyped-definitions-and-calls
  "--disallow-untyped-calls",
  "--disallow-untyped-defs",
  "--disallow-untyped-decorators",
]
